--- a/JavaScript/MainCurrencyConv.html
+++ b/JavaScript/MainCurrencyConv.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Conversion</title>
-    <
 </head>
 <body>
+    <div>
     <select id = "from">
         <option>Uk</option>
         <option>USA</option>
@@ -17,6 +17,7 @@
     <select id = "to">
         <option>India</option>
     </select>
+    </div>
 
 
 </body>
